@@ -1,0 +1,4 @@
+<http://example.org/stuff/1.0/a> <http://example.org/stuff/1.0/b> _:genid1 .
+_:genid1 <http://www.w3.org/1999/02/22-rdf-syntax-ns#first> _:genid2 .
+_:genid2 <http://example.org/stuff/1.0/c> <http://example.org/stuff/1.0/d> .
+_:genid1 <http://www.w3.org/1999/02/22-rdf-syntax-ns#rest> <http://www.w3.org/1999/02/22-rdf-syntax-ns#nil> .
