@@ -1,0 +1,1 @@
+("apple" "banana") a <http://example.org/List> .
