@@ -1,0 +1,44 @@
+@prefix : <http://example.org/> .
+
+() :isA :List .
+
+[] :isA :Blank .
+
+() :sameAs () .
+
+[] :sameAs [] .
+
+(
+	"apple"
+	"banana"
+	"pear"
+) a :List .
+
+(
+	(:a :b)
+	(:c :d)
+) a :List .
+
+[]
+	:list (
+		"apple"
+		"banana"
+		"pear"
+	) .
+
+[]
+	:a :b , :c , :d .
+
+[]
+	:a [
+		:b :c ;
+		:d :e ;
+	] , [
+		:f :g
+	] .
+
+[]
+	:list (
+		[ a :Apple ]
+		[ a :Banana ]
+	) .
